cs122b-project1-api-example-main/fabflix-ingress-multi.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fabflix-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-name: stickounet
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/login
            pathType: Prefix
            backend:
              service:
                name: fabflix-login
                port:
                  number: 8080
          - path: /login.*
            pathType: ImplementationSpecific
            backend:
              service:
                name: fabflix-login
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fabflix-movies
                port:
                  number: 8080
